--- a/Front-End-Angular/package.json
+++ b/Front-End-Angular/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.1.0",
+    "@angular/animations": "^16.2.12",
     "@angular/common": "^16.1.0",
     "@angular/compiler": "^16.1.0",
     "@angular/core": "^16.1.0",
@@ -21,6 +21,7 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "angular-code-input": "^2.0.0",
     "bootstrap": "^5.3.3",
+    "ngx-toastr": "^19.0.0",
     "primeng": "^16.9.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
